--- a/css/style.css
+++ b/css/style.css
@@ -439,6 +439,10 @@ section {
     resize: none;
 }
 
+.footer {
+    background-color: #5A1D25;
+}
+
 .footer .box-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(23rem, 1fr));
@@ -448,14 +452,14 @@ section {
 .footer .box-container .box h3 {
     font-size: 2.5rem;
     padding: 1rem 0;
-    color: var(--main-color);
+    color: #fff;
 }
 
 .footer .box-container .box a {
     display: block;
     font-size: 1.5rem;
     padding: 1rem 0;
-    color: var(--main-color);
+    color: #fff;
 }
 
 .footer .box-container .box a i {
@@ -471,7 +475,7 @@ section {
     font-size: 2rem;
     padding: 2rem 1rem;
     margin-top: 1rem;
-    color: var(--main-color);
+    color: #fff;
 }
 
 .footer .credit span {
